[gd_scene load_steps=8 format=3 uid="uid://grkubh56v8bk"]

[ext_resource type="Script" path="res://Assets/Scripts/UI/LevelUIManager.gd" id="1_0c62w"]
[ext_resource type="Theme" uid="uid://dt22awaj6rh47" path="res://Assets/User-Interface/Themes/ButtonTheme.tres" id="2_n8wle"]
[ext_resource type="FontFile" uid="uid://elp7o4t3i2jp" path="res://Assets/User-Interface/Fonts/Press_Start_2P/PressStart2P-Regular.ttf" id="3_8ustl"]

[sub_resource type="Animation" id="Animation_bnge3"]
resource_name = "FadeIn"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0pff7"]
_data = {
"FadeIn": SubResource("Animation_bnge3")
}

[sub_resource type="Animation" id="Animation_2je1q"]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_utpkb"]
_data = {
"Fade": SubResource("Animation_2je1q")
}

[node name="LevelUIManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0c62w")
level_name = "[center]A-L

Level Name Here

"
level_select = "res://Scenes/Area1Scene.tscn"

[node name="CheckpointNotif" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CheckpointNotif"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 550
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="CheckpointNotif/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CheckpointNotif/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
clip_contents = false
layout_mode = 2
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("3_8ustl")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center][wave]CHECKPOINT[/wave][/center]"
fit_content = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CheckpointNotif/VBoxContainer/RichTextLabel"]
libraries = {
"": SubResource("AnimationLibrary_0pff7")
}

[node name="LevelName" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LevelName"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 126

[node name="MarginContainer" type="MarginContainer" parent="LevelName/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="LevelName/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="LevelName/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(290, 0)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="LevelName/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("3_8ustl")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]1-0

Testing"
fit_content = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelName/VBoxContainer/HBoxContainer/RichTextLabel"]
libraries = {
"": SubResource("AnimationLibrary_utpkb")
}

[node name="MarginContainer2" type="MarginContainer" parent="LevelName/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(290, 0)
layout_mode = 2

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="System" type="HBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/System"]
layout_mode = 2

[node name="Options1" type="VBoxContainer" parent="PauseMenu/System"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 30
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/System/Options1"]
layout_mode = 2

[node name="Continue" type="Button" parent="PauseMenu/System/Options1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_n8wle")
theme_override_font_sizes/font_size = 30
text = "Continue"

[node name="RestartLevel" type="Button" parent="PauseMenu/System/Options1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_n8wle")
theme_override_font_sizes/font_size = 30
text = "Restart
Level"

[node name="LevelSelect" type="Button" parent="PauseMenu/System/Options1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_n8wle")
theme_override_font_sizes/font_size = 30
text = "Level 
Select"

[node name="MarginContainer2" type="MarginContainer" parent="PauseMenu/System/Options1"]
layout_mode = 2

[node name="PausedText" type="VBoxContainer" parent="PauseMenu/System"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/System/PausedText"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Paused" type="RichTextLabel" parent="PauseMenu/System/PausedText"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("3_8ustl")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center][rainbow]Paused[/rainbow][/center]"
fit_content = true

[node name="MarginContainer2" type="MarginContainer" parent="PauseMenu/System/PausedText"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Level" type="RichTextLabel" parent="PauseMenu/System/PausedText"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("3_8ustl")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]1-0

Testing"
fit_content = true

[node name="MarginContainer3" type="MarginContainer" parent="PauseMenu/System/PausedText"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="Options2" type="VBoxContainer" parent="PauseMenu/System"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 100
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/System/Options2"]
layout_mode = 2

[node name="MainMenu" type="Button" parent="PauseMenu/System/Options2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_n8wle")
theme_override_font_sizes/font_size = 30
text = "Main
Menu"

[node name="ExitGame" type="Button" parent="PauseMenu/System/Options2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_n8wle")
theme_override_font_sizes/font_size = 30
text = "Exit
Game"

[node name="MarginContainer3" type="MarginContainer" parent="PauseMenu/System/Options2"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="PauseMenu/System"]
layout_mode = 2

[node name="EndCardMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="EndCardMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="EndCardMenu/HBoxContainer"]
layout_mode = 2

[node name="Contents" type="VBoxContainer" parent="EndCardMenu/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 22

[node name="MarginContainer" type="MarginContainer" parent="EndCardMenu/HBoxContainer/Contents"]
layout_mode = 2

[node name="LevelFinish" type="RichTextLabel" parent="EndCardMenu/HBoxContainer/Contents"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_8ustl")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center][rainbow]Level Complete![/rainbow][/center]"
fit_content = true

[node name="MarginContainer2" type="MarginContainer" parent="EndCardMenu/HBoxContainer/Contents"]
layout_mode = 2

[node name="Level" type="RichTextLabel" parent="EndCardMenu/HBoxContainer/Contents"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("3_8ustl")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]1-0

Testing"
fit_content = true

[node name="MarginContainer3" type="MarginContainer" parent="EndCardMenu/HBoxContainer/Contents"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="EndCardMenu/HBoxContainer/Contents"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 18
alignment = 1

[node name="LevelSelect" type="Button" parent="EndCardMenu/HBoxContainer/Contents/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_n8wle")
theme_override_font_sizes/font_size = 30
text = "Level
Select"

[node name="RestartLevel" type="Button" parent="EndCardMenu/HBoxContainer/Contents/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_n8wle")
theme_override_font_sizes/font_size = 30
text = "Restart
Level"

[node name="NextLevel" type="Button" parent="EndCardMenu/HBoxContainer/Contents/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_n8wle")
theme_override_font_sizes/font_size = 30
text = "Next
Level"

[node name="MainMenu" type="Button" parent="EndCardMenu/HBoxContainer/Contents/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_n8wle")
theme_override_font_sizes/font_size = 30
text = "Main
Menu"

[node name="MarginContainer4" type="MarginContainer" parent="EndCardMenu/HBoxContainer/Contents"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="EndCardMenu/HBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="PauseMenu/System/Options1/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PauseMenu/System/Options1/RestartLevel" to="." method="_on_restart_level_pressed"]
[connection signal="pressed" from="PauseMenu/System/Options1/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="PauseMenu/System/Options2/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PauseMenu/System/Options2/ExitGame" to="." method="_on_exit_game_pressed"]
[connection signal="pressed" from="EndCardMenu/HBoxContainer/Contents/Buttons/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="EndCardMenu/HBoxContainer/Contents/Buttons/RestartLevel" to="." method="_on_restart_level_pressed"]
[connection signal="pressed" from="EndCardMenu/HBoxContainer/Contents/Buttons/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="EndCardMenu/HBoxContainer/Contents/Buttons/MainMenu" to="." method="_on_main_menu_pressed"]
